parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkComments
    TkPunto

Grammar

Rule 0     S' -> block
Rule 1     block -> TkOBlock TkCBlock
Rule 2     block -> TkOBlock TkDeclare variable_List instruction_block TkCBlock
Rule 3     block -> TkOBlock instruction_block TkCBlock
Rule 4     variable_List -> TkId TkComma variable_List
Rule 5     variable_List -> TkId TkTwoPoints type TkComma variable_List
Rule 6     variable_List -> TkId TkTwoPoints type TkSemicolon variable_List
Rule 7     variable_List -> TkId TkTwoPoints type
Rule 8     variable_List -> type TkComma variable_List
Rule 9     variable_List -> type TkSemicolon
Rule 10    variable_List -> type
Rule 11    variable_List -> variable_List variable_List
Rule 12    type -> TkArray TkOBracket TkNum TkSoForth TkNum TkCBracket
Rule 13    type -> TkInt
Rule 14    type -> TkBool
Rule 15    instruction_block -> instructions TkSemicolon instruction_block
Rule 16    instruction_block -> instructions
Rule 17    instructions -> assign_inst
Rule 18    instructions -> input_inst
Rule 19    instructions -> output_inst
Rule 20    instructions -> if_guard_inst
Rule 21    instructions -> iteration_for_inst
Rule 22    instructions -> iteration_mult_guard_inst
Rule 23    instructions -> block
Rule 24    assign_inst -> TkId TkAsig expression
Rule 25    array_exp -> TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp
Rule 26    array_exp -> TkOpenPar expression TkTwoPoints expression TkClosePar array_exp
Rule 27    array_exp -> TkId TkOBracket expression TkCBracket
Rule 28    array_exp -> TkId TkConcat TkId
Rule 29    array_exp -> array_exp TkConcat TkId
Rule 30    array_exp -> TkId TkConcat array_exp
Rule 31    array_exp -> array_exp TkConcat array_exp
Rule 32    array_exp -> TkOBracket expression TkCBracket
Rule 33    array_exp -> TkAtoi TkOpenPar TkId TkClosePar
Rule 34    array_exp -> TkSize TkOpenPar TkId TkClosePar
Rule 35    array_exp -> TkMax TkOpenPar TkId TkClosePar
Rule 36    array_exp -> TkMin TkOpenPar TkId TkClosePar
Rule 37    array_exp1 -> TkOpenPar array_exp TkClosePar
Rule 38    expression -> TkOpenPar expression TkPlus expression TkClosePar
Rule 39    expression -> TkOpenPar expression TkMinus expression TkClosePar
Rule 40    expression -> TkOpenPar expression TkMult expression TkClosePar
Rule 41    expression -> TkOpenPar expression TkDiv expression TkClosePar
Rule 42    expression -> TkOpenPar expression TkMod expression TkClosePar
Rule 43    expression -> TkOpenPar expression TkConcat expression TkClosePar
Rule 44    expression -> TkOpenPar expression TkGeq expression TkClosePar
Rule 45    expression -> TkOpenPar expression TkLess expression TkClosePar
Rule 46    expression -> TkOpenPar expression TkGreater expression TkClosePar
Rule 47    expression -> TkOpenPar expression TkNEqual expression TkClosePar
Rule 48    expression -> TkOpenPar expression TkEqual expression TkClosePar
Rule 49    expression -> TkOpenPar expression TkOr expression TkClosePar
Rule 50    expression -> TkOpenPar expression TkAnd expression TkClosePar
Rule 51    expression -> TkOpenPar TkUminus expression TkClosePar
Rule 52    expression -> TkOpenPar TkNot expression TkClosePar
Rule 53    expression -> TkOpenPar TkId TkClosePar
Rule 54    expression -> TkOpenPar TkNum TkClosePar
Rule 55    expression -> TkOpenPar TkFalse TkClosePar
Rule 56    expression -> TkOpenPar TkTrue TkClosePar
Rule 57    expression -> TkOpenPar TkString TkClosePar
Rule 58    expression -> TkUminus expression
Rule 59    expression -> TkNot expression
Rule 60    expression -> array_exp
Rule 61    expression -> TkId
Rule 62    expression -> TkNum
Rule 63    expression -> TkFalse
Rule 64    expression -> TkTrue
Rule 65    expression -> TkString
Rule 66    expression -> array_exp1
Rule 67    expression -> expression TkPlus expression
Rule 68    expression -> expression TkMinus expression
Rule 69    expression -> expression TkMult expression
Rule 70    expression -> expression TkDiv expression
Rule 71    expression -> expression TkMod expression
Rule 72    expression -> expression TkLeq expression
Rule 73    expression -> expression TkGeq expression
Rule 74    expression -> expression TkLess expression
Rule 75    expression -> expression TkGreater expression
Rule 76    expression -> expression TkNEqual expression
Rule 77    expression -> expression TkEqual expression
Rule 78    expression -> expression TkOr expression
Rule 79    expression -> expression TkAnd expression
Rule 80    expression -> expression TkConcat expression
Rule 81    input_inst -> TkRead TkId
Rule 82    output_inst -> TkPrint expression
Rule 83    output_inst -> TkPrintln expression
Rule 84    if_guard_inst -> TkIf expression TkArrow instructions TkFi
Rule 85    if_guard_inst -> TkIf expression TkArrow instructions guards
Rule 86    guards -> TkGuard expression TkArrow instructions TkFi
Rule 87    guards -> TkGuard expression TkArrow instructions guards
Rule 88    iteration_for_inst -> TkFor TkId TkIn expression TkTo expression TkArrow block TkRof
Rule 89    iteration_mult_guard_inst -> TkDo expression TkArrow instructions guards TkOd
Rule 90    iteration_mult_guard_inst -> TkDo expression TkArrow instructions TkOd

Terminals, with rules where they appear

TkAnd                : 50 79
TkArray              : 12
TkArrow              : 84 85 86 87 88 89 90
TkAsig               : 24
TkAtoi               : 33
TkBool               : 14
TkCBlock             : 1 2 3
TkCBracket           : 12 27 32
TkClosePar           : 25 26 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
TkComma              : 4 5 8
TkComments           : 
TkConcat             : 28 29 30 31 43 80
TkDeclare            : 2
TkDiv                : 41 70
TkDo                 : 89 90
TkEqual              : 48 77
TkFalse              : 55 63
TkFi                 : 84 86
TkFor                : 88
TkGeq                : 44 73
TkGreater            : 46 75
TkGuard              : 86 87
TkId                 : 4 5 6 7 24 25 27 28 28 29 30 33 34 35 36 53 61 81 88
TkIf                 : 84 85
TkIn                 : 88
TkInt                : 13
TkLeq                : 72
TkLess               : 45 74
TkMax                : 35
TkMin                : 36
TkMinus              : 39 68
TkMod                : 42 71
TkMult               : 40 69
TkNEqual             : 47 76
TkNot                : 52 59
TkNum                : 12 12 54 62
TkOBlock             : 1 2 3
TkOBracket           : 12 27 32
TkOd                 : 89 90
TkOpenPar            : 25 26 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
TkOr                 : 49 78
TkPlus               : 38 67
TkPrint              : 82
TkPrintln            : 83
TkPunto              : 
TkRead               : 81
TkRof                : 88
TkSemicolon          : 6 9 15
TkSize               : 34
TkSoForth            : 12
TkString             : 57 65
TkTo                 : 88
TkTrue               : 56 64
TkTwoPoints          : 5 6 7 25 26
TkUminus             : 51 58
error                : 

Nonterminals, with rules where they appear

array_exp            : 25 26 29 30 31 31 37 60
array_exp1           : 66
assign_inst          : 17
block                : 23 88 0
expression           : 24 25 25 26 26 27 32 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52 58 59 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 82 83 84 85 86 87 88 88 89 90
guards               : 85 87 89
if_guard_inst        : 20
input_inst           : 18
instruction_block    : 2 3 15
instructions         : 15 16 84 85 86 87 89 90
iteration_for_inst   : 21
iteration_mult_guard_inst : 22
output_inst          : 19
type                 : 5 6 7 8 9 10
variable_List        : 2 4 5 6 8 11 11

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . TkOBlock TkCBlock
    (2) block -> . TkOBlock TkDeclare variable_List instruction_block TkCBlock
    (3) block -> . TkOBlock instruction_block TkCBlock

    TkOBlock        shift and go to state 2

    block                          shift and go to state 1

state 1

    (0) S' -> block .



state 2

    (1) block -> TkOBlock . TkCBlock
    (2) block -> TkOBlock . TkDeclare variable_List instruction_block TkCBlock
    (3) block -> TkOBlock . instruction_block TkCBlock
    (15) instruction_block -> . instructions TkSemicolon instruction_block
    (16) instruction_block -> . instructions
    (17) instructions -> . assign_inst
    (18) instructions -> . input_inst
    (19) instructions -> . output_inst
    (20) instructions -> . if_guard_inst
    (21) instructions -> . iteration_for_inst
    (22) instructions -> . iteration_mult_guard_inst
    (23) instructions -> . block
    (24) assign_inst -> . TkId TkAsig expression
    (81) input_inst -> . TkRead TkId
    (82) output_inst -> . TkPrint expression
    (83) output_inst -> . TkPrintln expression
    (84) if_guard_inst -> . TkIf expression TkArrow instructions TkFi
    (85) if_guard_inst -> . TkIf expression TkArrow instructions guards
    (88) iteration_for_inst -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof
    (89) iteration_mult_guard_inst -> . TkDo expression TkArrow instructions guards TkOd
    (90) iteration_mult_guard_inst -> . TkDo expression TkArrow instructions TkOd
    (1) block -> . TkOBlock TkCBlock
    (2) block -> . TkOBlock TkDeclare variable_List instruction_block TkCBlock
    (3) block -> . TkOBlock instruction_block TkCBlock

    TkCBlock        shift and go to state 3
    TkDeclare       shift and go to state 4
    TkId            shift and go to state 14
    TkRead          shift and go to state 15
    TkPrint         shift and go to state 16
    TkPrintln       shift and go to state 17
    TkIf            shift and go to state 18
    TkFor           shift and go to state 19
    TkDo            shift and go to state 20
    TkOBlock        shift and go to state 2

    instruction_block              shift and go to state 5
    instructions                   shift and go to state 6
    assign_inst                    shift and go to state 7
    input_inst                     shift and go to state 8
    output_inst                    shift and go to state 9
    if_guard_inst                  shift and go to state 10
    iteration_for_inst             shift and go to state 11
    iteration_mult_guard_inst      shift and go to state 12
    block                          shift and go to state 13

state 3

    (1) block -> TkOBlock TkCBlock .

    $end            reduce using rule 1 (block -> TkOBlock TkCBlock .)
    TkSemicolon     reduce using rule 1 (block -> TkOBlock TkCBlock .)
    TkCBlock        reduce using rule 1 (block -> TkOBlock TkCBlock .)
    TkFi            reduce using rule 1 (block -> TkOBlock TkCBlock .)
    TkGuard         reduce using rule 1 (block -> TkOBlock TkCBlock .)
    TkOd            reduce using rule 1 (block -> TkOBlock TkCBlock .)
    TkRof           reduce using rule 1 (block -> TkOBlock TkCBlock .)


state 4

    (2) block -> TkOBlock TkDeclare . variable_List instruction_block TkCBlock
    (4) variable_List -> . TkId TkComma variable_List
    (5) variable_List -> . TkId TkTwoPoints type TkComma variable_List
    (6) variable_List -> . TkId TkTwoPoints type TkSemicolon variable_List
    (7) variable_List -> . TkId TkTwoPoints type
    (8) variable_List -> . type TkComma variable_List
    (9) variable_List -> . type TkSemicolon
    (10) variable_List -> . type
    (11) variable_List -> . variable_List variable_List
    (12) type -> . TkArray TkOBracket TkNum TkSoForth TkNum TkCBracket
    (13) type -> . TkInt
    (14) type -> . TkBool

    TkId            shift and go to state 22
    TkArray         shift and go to state 24
    TkInt           shift and go to state 25
    TkBool          shift and go to state 26

    variable_List                  shift and go to state 21
    type                           shift and go to state 23

state 5

    (3) block -> TkOBlock instruction_block . TkCBlock

    TkCBlock        shift and go to state 27


state 6

    (15) instruction_block -> instructions . TkSemicolon instruction_block
    (16) instruction_block -> instructions .

    TkSemicolon     shift and go to state 28
    TkCBlock        reduce using rule 16 (instruction_block -> instructions .)


state 7

    (17) instructions -> assign_inst .

    TkSemicolon     reduce using rule 17 (instructions -> assign_inst .)
    TkCBlock        reduce using rule 17 (instructions -> assign_inst .)
    TkFi            reduce using rule 17 (instructions -> assign_inst .)
    TkGuard         reduce using rule 17 (instructions -> assign_inst .)
    TkOd            reduce using rule 17 (instructions -> assign_inst .)


state 8

    (18) instructions -> input_inst .

    TkSemicolon     reduce using rule 18 (instructions -> input_inst .)
    TkCBlock        reduce using rule 18 (instructions -> input_inst .)
    TkFi            reduce using rule 18 (instructions -> input_inst .)
    TkGuard         reduce using rule 18 (instructions -> input_inst .)
    TkOd            reduce using rule 18 (instructions -> input_inst .)


state 9

    (19) instructions -> output_inst .

    TkSemicolon     reduce using rule 19 (instructions -> output_inst .)
    TkCBlock        reduce using rule 19 (instructions -> output_inst .)
    TkFi            reduce using rule 19 (instructions -> output_inst .)
    TkGuard         reduce using rule 19 (instructions -> output_inst .)
    TkOd            reduce using rule 19 (instructions -> output_inst .)


state 10

    (20) instructions -> if_guard_inst .

    TkSemicolon     reduce using rule 20 (instructions -> if_guard_inst .)
    TkCBlock        reduce using rule 20 (instructions -> if_guard_inst .)
    TkFi            reduce using rule 20 (instructions -> if_guard_inst .)
    TkGuard         reduce using rule 20 (instructions -> if_guard_inst .)
    TkOd            reduce using rule 20 (instructions -> if_guard_inst .)


state 11

    (21) instructions -> iteration_for_inst .

    TkSemicolon     reduce using rule 21 (instructions -> iteration_for_inst .)
    TkCBlock        reduce using rule 21 (instructions -> iteration_for_inst .)
    TkFi            reduce using rule 21 (instructions -> iteration_for_inst .)
    TkGuard         reduce using rule 21 (instructions -> iteration_for_inst .)
    TkOd            reduce using rule 21 (instructions -> iteration_for_inst .)


state 12

    (22) instructions -> iteration_mult_guard_inst .

    TkSemicolon     reduce using rule 22 (instructions -> iteration_mult_guard_inst .)
    TkCBlock        reduce using rule 22 (instructions -> iteration_mult_guard_inst .)
    TkFi            reduce using rule 22 (instructions -> iteration_mult_guard_inst .)
    TkGuard         reduce using rule 22 (instructions -> iteration_mult_guard_inst .)
    TkOd            reduce using rule 22 (instructions -> iteration_mult_guard_inst .)


state 13

    (23) instructions -> block .

    TkSemicolon     reduce using rule 23 (instructions -> block .)
    TkCBlock        reduce using rule 23 (instructions -> block .)
    TkFi            reduce using rule 23 (instructions -> block .)
    TkGuard         reduce using rule 23 (instructions -> block .)
    TkOd            reduce using rule 23 (instructions -> block .)


state 14

    (24) assign_inst -> TkId . TkAsig expression

    TkAsig          shift and go to state 29


state 15

    (81) input_inst -> TkRead . TkId

    TkId            shift and go to state 30


state 16

    (82) output_inst -> TkPrint . expression
    (38) expression -> . TkOpenPar expression TkPlus expression TkClosePar
    (39) expression -> . TkOpenPar expression TkMinus expression TkClosePar
    (40) expression -> . TkOpenPar expression TkMult expression TkClosePar
    (41) expression -> . TkOpenPar expression TkDiv expression TkClosePar
    (42) expression -> . TkOpenPar expression TkMod expression TkClosePar
    (43) expression -> . TkOpenPar expression TkConcat expression TkClosePar
    (44) expression -> . TkOpenPar expression TkGeq expression TkClosePar
    (45) expression -> . TkOpenPar expression TkLess expression TkClosePar
    (46) expression -> . TkOpenPar expression TkGreater expression TkClosePar
    (47) expression -> . TkOpenPar expression TkNEqual expression TkClosePar
    (48) expression -> . TkOpenPar expression TkEqual expression TkClosePar
    (49) expression -> . TkOpenPar expression TkOr expression TkClosePar
    (50) expression -> . TkOpenPar expression TkAnd expression TkClosePar
    (51) expression -> . TkOpenPar TkUminus expression TkClosePar
    (52) expression -> . TkOpenPar TkNot expression TkClosePar
    (53) expression -> . TkOpenPar TkId TkClosePar
    (54) expression -> . TkOpenPar TkNum TkClosePar
    (55) expression -> . TkOpenPar TkFalse TkClosePar
    (56) expression -> . TkOpenPar TkTrue TkClosePar
    (57) expression -> . TkOpenPar TkString TkClosePar
    (58) expression -> . TkUminus expression
    (59) expression -> . TkNot expression
    (60) expression -> . array_exp
    (61) expression -> . TkId
    (62) expression -> . TkNum
    (63) expression -> . TkFalse
    (64) expression -> . TkTrue
    (65) expression -> . TkString
    (66) expression -> . array_exp1
    (67) expression -> . expression TkPlus expression
    (68) expression -> . expression TkMinus expression
    (69) expression -> . expression TkMult expression
    (70) expression -> . expression TkDiv expression
    (71) expression -> . expression TkMod expression
    (72) expression -> . expression TkLeq expression
    (73) expression -> . expression TkGeq expression
    (74) expression -> . expression TkLess expression
    (75) expression -> . expression TkGreater expression
    (76) expression -> . expression TkNEqual expression
    (77) expression -> . expression TkEqual expression
    (78) expression -> . expression TkOr expression
    (79) expression -> . expression TkAnd expression
    (80) expression -> . expression TkConcat expression
    (25) array_exp -> . TkId TkOpenPar expression TkTwoPoints expression TkClosePar array_exp
    (26) array_exp -> . TkOpenPar expression TkTwoPoints expression TkClosePar array_exp
    (27) array_exp -> . TkId TkOBracket expression TkCBracket
    (28) array_exp -> . TkId TkConcat TkId
    (29) array_exp -> . array_exp TkConcat TkId
    (30) array_exp -> . TkId TkConcat array_exp
    (31) array_exp -> . array_exp TkConcat array_exp
    (32) array_exp -> . TkOBracket expression TkCBracket
    (33) array_exp -> . TkAtoi TkOpenPar TkId TkClosePar
    (34) array_exp -> . TkSize TkOpenPar TkId TkClosePar
    (35) array_exp -> . TkMax TkOpenPar TkId TkClosePar
    (36) array_exp -> . TkMin TkOpenPar TkId TkClosePar
    (37) array_exp1 -> . TkOpenPar array_exp TkClosePar

    TkOpenPar       shift and go to state 32
    TkUminus        shift and go to state 33
    TkNot           shift and go to state 34
    TkId            shift and go to state 35
    TkNum           shift and go to state 36
    TkFalse         shift and go to state 37
    TkTrue          shift and go to state 38
    TkString        shift and go to state 39
    TkOBracket      shift and go to state 42
    TkAtoi          shift and go to state 43
    TkSize          shift and go to state 44
    TkMax           shift and go to state 45
    TkMin           shift and go to state 46

    expression                     shift and go to state 31
    array_exp                      shift and go to state 40
    array_exp1                     shift and go to state 41

state 17
